Dao layer bug fixed.
It no longer adding \n symbol at the end of the file